--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="content-section container">
       <h2 class="section-header">About Me</h2>
       <img class="about-prof-image" src="assets/profile.png" height="200" width="200">
-      <p> I am a Computer Science Major hailing from Prince Georges County, MD. I enjoy 
+      <p> I am a Computer Science Major hailing from Prince Georges County, Maryland. I enjoy 
         programming in Ruby and Python. My favorite computer science topics are algorithms 
         and data structures.
 
